<resources>
    <string name="app_name">TheSmartBin</string>
    <string name="ID">Enter Login ID</string>
    <string name="passwordHint">Enter Password</string>
    <string name="management">Management</string>
    <string name="ground">LOGIN</string>
    <string name="groundText">Bin Tracker</string>
    <string name="BinInfo1">Building 1 Level 1(Lift Lobby)</string>
    <string name="BinInfo2">Building 1 Level 5 (Oustide C06)</string>
    <string name="BinInfo3">Building 1 Level 7 (Outside ESD Faculty Office</string>
    <string name="BinInfo4">Building 2 Level 1 (Campus Centre Lift Lobby)</string>
    <string name="BinInfo5">Building 2 Level 4 (Outside Digital Systems Lab)</string>
    <string name="BinInfo6">Building 5 Level 1 (Outside FAB Lab Level 1)</string>
    <string name="BinInfo7">Building 3 Level 1 (Lift Lobby)</string>
    <string name="BinInfo8">Building 3 Level 2 (Lift Lobby)</string>
    <string name="BinInfo9">Building 3 Level 3 (Lift Lobby)</string>
    <string name="BinInfo10">Building 3 Level 4 (Lift Lobby)</string>
    <string name="BinInfo11">Building 3 Level 5 (Lift Lobby)</string>
    <string name="BinInfo12">Bulding 3 Level 6 (Lift Lobby)</string>
    <string name="BinInfo13">Building 3 Level 7 (Lift Lobby)</string>
    <string name="BinStatus">Status of Bin: </string>
    <string name="staffReport">Staff Report</string>
    <string name="Button1">Empty</string>
    <string name="Bin_Status">Enter Bin Status Here:</string>
    <string-array name="Possible_Status">
        <item>Empty</item>
        <item>25%</item>
        <item>50%</item>
        <item>75%</item>
        <item>Full</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="bin_locator">Location of Bin</string>
    <string name="bin_locator_info">Building 1 Level 3 (Lift Lobby) </string>
    <string name="bin_locator_info_2">Singapore University of Technology and Design</string>
    <string name="AboutSmartBin">About The Smart Bin</string>
    <string name="SmartBinInfo">The Smart Bin is a module designed to fit any available trash bin in the market. The module comes with a set of sonar sensors and load sensors. Both sensors work hand in hand to produce readings measure the amount of trash in a particular bin. Our classifier then classifies these readings into user-friendly data, such as degree of emptiness of such bins. With The Smart Bin, our users are now empowered analyse data collected from their networkof trash bins, and make wiser decisions with regards to resource allocation. The Smart Bin is in the frontier of waste management and we thank you for being a part of this journey.</string>
    <string name="UserProfile">User Profile</string>


</resources>
