<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_horizontal_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/groundText"
            android:textColor="@color/colorAccent"
            android:textSize="40sp"
            android:textStyle="italic"
            android:paddingBottom="20dp"

            android:id="@+id/text"
            android:paddingTop="30dp"
            android:paddingLeft="70dp"


            android:layout_alignParentStart="true" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/bin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/text"
            android:paddingRight="30dp"
            android:id="@+id/bin_pic"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BinInfo1"
                android:background="@color/verdigirs"
                android:textColor="@color/white" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BinInfo2"
                android:background="@color/verdigirs"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BinInfo3"
                android:background="@color/verdigirs"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BinInfo4"
                android:background="@color/verdigirs"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BinInfo5"
                android:background="@color/verdigirs"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BinInfo6"
                android:background="@color/verdigirs"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BinInfo7"
                android:background="@color/verdigirs"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BinInfo8"
                android:background="@color/verdigirs"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BinInfo9"
                android:background="@color/verdigirs"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BinInfo10"
                android:background="@color/verdigirs"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BinInfo11"
                android:background="@color/verdigirs"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BinInfo12"
                android:background="@color/verdigirs"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/BinInfo13"
                android:background="@color/verdigirs"
                android:textColor="@color/white"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>